<resources>
    <string name="app_name">Don\'t Slack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="set">Set</string>
    <string name="minutes">Minutes</string>
    <string name="focus_mode">focus mode</string>
    <string name="reset">reset</string>
    <string name="_00_00">00:00</string>
    <string name="start">start</string>
</resources>